fix cursor selection not showing up

--- a/src/client/styles/app.styl
+++ b/src/client/styles/app.styl
@@ -222,7 +222,8 @@ body
     color #75abff
 
   div.cursor
-    text-decoration underline
+    span
+      text-decoration underline
 
   div.border-bottom
     border-bottom 2px dashed #ffffff
